--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
     </div>
 </div>
 
-
+<script src="./script/maskPhone.js"></script>
 <script src="./script/script.js"></script>
 </body>
 </html>
