to be continium

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <link href="css/style.css" rel="stylesheet">
 
     <title>Септик-погреб</title>
+    <style type="text/css">
+        .hide1 {
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 1s;
+            }
+        .show1 {
+            height: fit-content;
+            max-height: 1000px;
+            transition: max-height 1s;
+            }
+    </style>
 
 
 </head>
@@ -564,7 +576,7 @@
     </div>
 </div>
 
-<script src="./script/maskPhone.js"></script>
+<script src="./script/validator.js"></script>
 <script src="./script/script.js"></script>
 </body>
 </html>
