--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     <link href="css/style.css" rel="stylesheet">
 
     <title>Септик-погреб</title>
+    <!-- <style>
+        .accordion {
+          background-color: #eee;
+          color: #444;
+          cursor: pointer;
+          padding: 18px;
+          width: 100%;
+          border: none;
+          text-align: left;
+          outline: none;
+          font-size: 15px;
+          transition: 0.4s;
+        }
+        
+        .active, .accordion:hover {
+          background-color: #ccc;
+        }
+        
+        .panel {
+          padding: 0 18px;
+          background-color: white;
+          max-height: 0;
+          overflow: hidden;
+          transition: max-height 0.2s ease-out;
+        }
+        </style> -->
 
 </head>
 
@@ -563,7 +589,7 @@
     </div>
 </div>
 
-<script src="./script/validator.js"></script>
 <script src="./script/script.js"></script>
+<script src="./dist/main.js"></script>
 </body>
 </html>
